--- a/duan/src/index.css
+++ b/duan/src/index.css
@@ -1,1 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Roboto:wght@300;400;500;700&display=swap');
 @import "tailwindcss";
+
+:root {
+    --font-heading: 'Merriweather', serif;
+    --font-body: 'Roboto', sans-serif;
+    --vietnam-red: #730109;
+    --vietnam-yellow: #ffebd3;
+    --vietnam-white: #ffffff;
+}
